WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298225
[WPE] wpe_renderer_backend_egl_target_deinitialize() is never called
https://bugs.webkit.org/show_bug.cgi?id=298225
Summary
[WPE] wpe_renderer_backend_egl_target_deinitialize() is never called
Adrian Perez
Reported
2025-09-02 06:21:13 PDT
libwpe 1.9.1 introduced an additional wpe_renderer_backend_egl_target_interface::deinitialize function, which may be called some time before destruction; but the corresponding call to wpe_renderer_backend_egl_target_deinitialize() was never added in WebKit.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-09-02 06:41:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50174
EWS
Comment 2
2025-09-10 03:21:04 PDT
Committed
299801@main
(ff2fcc374df4): <
https://commits.webkit.org/299801@main
> Reviewed commits have been landed. Closing PR #50174 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug