[WPE] wpe_renderer_backend_egl_target_deinitialize() is never called https://bugs.webkit.org/show_bug.cgi?id=298225

Reviewed by Carlos Garcia Campos.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
(WebKit::AcceleratedSurface::RenderTargetWPEBackend::~RenderTargetWPEBackend):
Add missing call to wpe_renderer_backend_egl_target_deinitialize().

Canonical link: https://commits.webkit.org/299801@main